--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
     <!-- Put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>My Portfolio</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -48,7 +48,7 @@
         <h1 class="hero-title" class="load-hidden">
           Hi, my name is <span class="text-color-main">Abu Abdullah</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -249,10 +249,10 @@
           <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-linkedin fa-inverse"></i>
+          <a href="https://facebook.com/princeqhaz" target="_blank">
+            <i class="fa fa-facebook-official"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/khazier12" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -261,11 +261,11 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2020 - developed by <a href="https://github.com/khazier12" target="_blank">Abu Abdullah</a>
           </a>
         </p>
 
-        <!-- Remove this paragraph once you setup your custom portfolio -->
+        <!-- Remove this paragraph once you setup your custom portfolio
         <p class="mt-3 pt-3">
           <a
             class="github-button"
@@ -285,7 +285,7 @@
             aria-label="Star cobidev/simplefolio on GitHub"
             >Star</a
           >
-        </p>
+        </p>  -->
       </div>
     </footer>
     <!-- /END Footer Section -->
