--- a/src/template.html
+++ b/src/template.html
@@ -223,13 +223,13 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            If you need me
           </p>
           <a
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:example@email.com"
-            >Call to Action</a
+            >Email me</a
           >
         </div>
       </div>
