updating About me

--- a/src/template.html
+++ b/src/template.html
@@ -82,7 +82,8 @@
                 7 years of experiences in wide range of design disciplines.
               </p>
               <p class="about-wrapper__info-text">
-                Photoshop - Illustrator - After Effects - Cinema4d - Sublime - Visual Studio Code
+                Photoshop - Illustrator - After Effects - Cinema4d <br>
+                HTML5 - CSS - Javascript - REACT
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
